--- a/socialLogin.html
+++ b/socialLogin.html
@@ -58,5 +58,32 @@
         </div>
     </div>
 </div>
+<section class="space">
+</section>
+<h2 style="text-align:center">Login with Social Media or Manually using GRID and Flexbox</h2>
+<section class="space">
+</section>
+<div class="grid-style-social">
+    <div class="box">
+        <a href="#" class="fb btn">
+            <i class="fa fa-facebook fa-fw"></i> Login with Facebook
+        </a>
+        <a href="#" class="twitter btn">
+            <i class="fa fa-twitter fa-fw"></i> Login with Twitter
+        </a>
+        <a href="#" class="google btn"><i class="fa fa-google fa-fw">
+            </i> Login with Google+
+        </a>
+    </div>
+    <div class="box">
+        <input type="text" name="username" placeholder="Username" required>
+        <input type="password" name="password" placeholder="Password" required>
+        <input type="submit" value="Login">
+    </div>
+
+
+
+</div>
+
 </body>
 </html>
